--- a/meta/main.yml
+++ b/meta/main.yml
@@ -118,4 +118,4 @@ dependencies:
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
-  - role: git+https://github.com/w8n/role.checkinstall.git,,w8n.checkinstall
+  - role: w8n.checkinstall
